Update on the Header ( non functional link added)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 
 <body>
     <div class="container">
-        <div class="header"></div>
+        <div class="header" onclick="openNav()">
+            <div id="links" class="links">
+                <div class="link_content">
+                    <a>CERTIFICATIONS</a>
+                    <a>ABOUT US</a>
+                    <a>CONTACT</a>
+                </div>
+            </div>
+            <div class="menubarholder">
+                <div class="menubar"></div>
+                <div class="menubar"></div>
+                <div class="menubar"></div>
+            </div>
+        </div>
         <div class="top-background">
             <div id="slideshow">
                 <div class="slide-wrapper">
@@ -27,7 +40,8 @@
                     </div>
                     <div class="slide" style="background: url('images/global.jpg'); background-size: cover;">
                         <h2 id="slide-three-header">GLOBAL REACH</h2>
-                        <p id="slide-three-follow">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda do
+                        <p id="slide-three-follow">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
+                            do
                         </p>
                     </div>
                     <div class="slide" style="background: url('images/consultant3.jpg'); background-size: cover;">
@@ -65,18 +79,18 @@
             <div class="newsletter">
                 <form action="action_page.php">
                     <div class="form-container">
-                      <h1>Sign Up For Discounts</h1>
-                      <p>We would love to let you know when available</p>
-                      <hr>
-                  
-                      <label for="email"><b>Email</b></label>
-                      <input type="text" placeholder="Enter Email Here" name="email" required>
-                  
-                      <div class="clearfix">
-                        <button type="submit" class="signupbtn">Sign Up</button>
-                      </div>
+                        <h1>Sign Up For Discounts</h1>
+                        <p>We would love to let you know when available</p>
+                        <hr>
+
+                        <label for="email"><b>Email</b></label>
+                        <input type="text" placeholder="Enter Email Here" name="email" required>
+
+                        <div class="clearfix">
+                            <button type="submit" class="signupbtn">Sign Up</button>
+                        </div>
                     </div>
-                  </form>
+                </form>
             </div>
         </div>
         <div class="footer"></div>
