--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
                 </form>
             </div>
         </div>
-        <div class="footer"></div>
+        <div class="footer">
+            <div class="address">SUITE C13, NKWEGU PLAZA, DURUMI I, FCT</div>
+            <div class="copyright">EMYCINTH 2022</div>
+        </div>
     </div>
 
 
